--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^1.12.0",
     "mongoose": "^5.11.5",
     "opentok": "^2.10.0"
   },
