--- a/view/package.json
+++ b/view/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-meta-tags": "^1.0.0",
     "react-router-dom": "^5.2.0"
   }
 }
